Fixed bug #61347 (inconsist isset behavior of Arrayobject)